# Neo-Wolf-v1

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.ps1
docs/: Checklist.md  Learning.md  process-flow.md  structure.md  test.md
engine/assets/: AssetManager.cpp  AssetManager.h  AudioConfig.cpp  AudioConfig.h  ContentConfig.cpp  ContentConfig.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
engine/audio/: AudioSystem.cpp  AudioSystem.h
engine/core/: App.cpp  Color.h  Engine.Core.cpp  Engine.Init.cpp  Engine.Render.cpp  Engine.Shutdown.cpp  Engine.Update.cpp  Engine.cpp  Engine.h  InputState.h  Log.cpp  Log.h  MathUtils.h  TimeState.h  Vec2.h  Vec2i.h
engine/particles/: Particle.cpp  Particle.h
engine/platform/: PlatformSDL.cpp  PlatformSDL.h
engine/render/: Framebuffer.cpp  Framebuffer.h  ParticleRenderer.cpp  ParticleRenderer.h  Raycaster.cpp  Raycaster.h  SpriteRenderer.cpp  SpriteRenderer.h
engine/ui/: UiRenderer.cpp  UiRenderer.h
engine/world/: Entity.cpp  Entity.h  EntityPlacementLoader.cpp  EntityPlacementLoader.h  InteractionRules.cpp  InteractionRules.h  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  MovementRules.cpp  MovementRules.h  Player.h  Sprite.h
game/assets/: ceiling.ppm  floor.ppm  sprite_decor.ppm  sprite_enemy.ppm  sprite_pickup.ppm  wall_alt_a.ppm  wall_alt_b.ppm  wall_main.ppm
game/defs/: audio.cfg  entities.json  level01.entities.csv  level01.entities.json  sprites.cfg  sprites.json  textures.json  wall_textures.cfg
game/maps/: level01.map
src/: main.cpp
tests/: LogicTests.cpp
